--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 </head>
 <body>
   <h1>Select a PDF</h1>
-
-  <a href="first.pdf" target="_blank">View PDF 1</a>
-  <a href="second.pdf" target="_blank">View PDF 2</a>
-
+  <a href="first">View PDF 1</a>
+  <a href="second">View PDF 2</a>
 </body>
 </html>
