--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <h1>Select a PDF</h1>
-  <a href="first">View PDF 1</a>
-  <a href="second">View PDF 2</a>
+  <a href="inspo">Inspo</a>
+  <a href="price_list">Price List</a>
 </body>
 </html>
