--- a/inspo/index.html
+++ b/inspo/index.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <iframe src="../assets/inspo.pdf"></iframe>
+    <embed src="../assets/inspo.pdf" type="application/pdf">
   </body>
 </html>
