--- a/inspo/index.html
+++ b/inspo/index.html
@@ -8,7 +8,7 @@
         padding: 0;
         height: 100%;
       }
-      iframe {
+      embed {
         width: 100%;
         height: 100%;
         border: none;
