--- a/inspo/index.html
+++ b/inspo/index.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PDF Viewer</title>
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-      }
-      embed {
-        width: 100%;
-        height: 100%;
-        border: none;
-      }
-    </style>
+    <meta http-equiv="refresh" content="0; url=../assets/inspo.pdf">
   </head>
-  <body>
-    <embed src="../assets/inspo.pdf" type="application/pdf">
-  </body>
 </html>
