--- a/price_list/index.html
+++ b/price_list/index.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PDF Viewer</title>
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-      }
-      iframe {
-        width: 100%;
-        height: 100%;
-        border: none;
-      }
-    </style>
+    <meta http-equiv="refresh" content="0; url=../assets/price_list.pdf">
   </head>
-  <body>
-    <iframe src="../assets/price_list.pdf"></iframe>
-  </body>
 </html>
