--- a/price_list/index.html
+++ b/price_list/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=../assets/price_list.pdf">
+    <meta http-equiv="refresh" content="0; url=../assets/price_list.pdf?v=2">
   </head>
 </html>
