--- a/inspo/index.html
+++ b/inspo/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=../assets/inspo.pdf">
+    <meta http-equiv="refresh" content="0; url=../assets/inspo.pdf?v=2">
   </head>
 </html>
