--- a/price_list/index.html
+++ b/price_list/index.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=../assets/price_list.pdf?v=2">
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Choose a PDF</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding-top: 100px;
+      background-color: #f9f9f9;
+    }
+    a {
+      display: inline-block;
+      margin: 20px;
+      padding: 15px 30px;
+      background-color: #0066cc;
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      border-radius: 8px;
+    }
+    a:hover {
+      background-color: #004c99;
+    }
+  </style>
+</head>
+<body>
+  <h1>Select a PDF</h1>
+  <a href="../inspo">Inspo</a>
+  <a href="../price_list">Price List</a>
+</body>
 </html>
