--- a/price_list/index.html
+++ b/price_list/index.html
@@ -27,7 +27,10 @@
 </head>
 <body>
   <h1>Select a PDF</h1>
-  <a href="../inspo">Inspo</a>
-  <a href="../price_list">Price List</a>
+  <a href="https://docs.google.com/spreadsheets/d/1QawxjnFDR91TGp74NMDTMGJh2zSc4MV9kDqT_JJqIrk/edit?usp=sharing" target="_blank" rel="noopener noreferrer">
+    Monthly Calendar
+  </a>
+  <a href="../price_lis_activities">Ongoing Activities</a>
+  <a href="../price_list_Crafts">Ongoing Crafts</a>
 </body>
 </html>
