--- a/price_list/index.html
+++ b/price_list/index.html
@@ -26,11 +26,11 @@
   </style>
 </head>
 <body>
-  <h1>Select a PDF</h1>
+  <h1>Choose a PDF</h1>
   <a href="https://docs.google.com/spreadsheets/d/1QawxjnFDR91TGp74NMDTMGJh2zSc4MV9kDqT_JJqIrk/edit?usp=sharing" target="_blank" rel="noopener noreferrer">
     Monthly Calendar
   </a>
   <a href="../price_lis_activities">Ongoing Activities</a>
-  <a href="../price_list_Crafts">Ongoing Crafts</a>
+  <a href="../price_list_crafts">Ongoing Crafts</a>
 </body>
 </html>
