--- a/price_list/index.html
+++ b/price_list/index.html
@@ -30,7 +30,7 @@
   <a href="https://docs.google.com/spreadsheets/d/1QawxjnFDR91TGp74NMDTMGJh2zSc4MV9kDqT_JJqIrk/edit?usp=sharing" target="_blank" rel="noopener noreferrer">
     Monthly Calendar
   </a>
-  <a href="../price_list_activities">Ongoing Activities</a>
+  <a href="../price_list_activites">Ongoing Activities</a>
   <a href="../price_list_crafts">Ongoing Crafts</a>
 </body>
 </html>
